@@ -628,7 +628,7 @@ void MainWindow::loadSettings()
     migrateSettings();
 
     // Ask to set language at first start
-    if (!ttSettings->contains(SETTINGS_DISPLAY_LANGUAGE))
+    if (ttSettings->value(SETTINGS_GENERAL_FIRSTSTART, SETTINGS_GENERAL_FIRSTSTART_DEFAULT).toBool())
     {
         QLocale locale = QLocale::system();
         QString languageCode = locale.name();
